test/spec_vectors/i64/fail/module_19.wat
(module (func (result i64) (i64.popcnt (i32.const 0))))